--- a/index.html
+++ b/index.html
@@ -2,29 +2,40 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="style.css">
-  <title>Quiz App</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
 </head>
 
 <body>
-  <div class="quiz-container" id="quizBox">
-    <h1 class="quiz-title">QUIZ APP</h1>
+    <h1>JAVASCRIPT ASSIGNMENT</h1>
 
-    <div class="quiz-header">
-      <h2 id="currentquestion"></h2>
-    </div>
+    <!-- <img src="" id="MainImage" height="300" alt="">
+    <button onclick="PreviousImage()">Previous</button>
+    <button onclick="NextImage()">Next</button> -->
 
-    <div class="options" id="displayOption"></div>
+    <!-- <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus ipsam provident ab. Distinctio est voluptatem
+        fuga corporis exercitationem minus rem minima pariatur? Necessitatibus incidunt fugiat eveniet non provident
+        earum molestias.</p>
+    <p>Eligendi explicabo repellat odit ducimus aliquid rerum ut earum, omnis praesentium quod accusantium, itaque
+        dolorum! Quas reprehenderit voluptate, ex animi dolorem quam voluptatem vitae aperiam, ut quae culpa dignissimos
+        quaerat.</p>
+    <div id="box">
 
-    <div class="quiz-footer">
-      <span>Question <span id="currQuesNo"></span> of <span id="totalQuesNo"></span></span>
-      <span class="timer">⏱ <span id="displaytime"></span>s</span>
-    </div>
-  </div>
+        <p>Accusamus reiciendis magnam obcaecati nisi dolores! Earum consectetur quas nisi quo molestias, itaque
+            similique blanditiis nemo veritatis saepe ea molestiae beatae totam tenetur eum quibusdam maiores,
+            necessitatibus ipsa distinctio deleniti!</p>
+        <p>Consectetur voluptate deleniti animi? Cupiditate repudiandae similique dolore magni saepe blanditiis expedita
+            minus qui sint neque sit inventore debitis, assumenda placeat vitae accusamus animi, veniam molestias
+            possimus. Libero, maxime aperiam.</p>
+    </div> -->
 
-  <script src="./app.js"></script>
+    <input id="inp" type="text">
+    <button onclick="addTodo()">Add</button>
+    <button onclick="DelteAll()">Delete All</button>
+    <div id="box"></div>
 </body>
+
+<script src="./app.js"></script>
 
 </html>
